--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 		"vscode": {
 			"extensions": [
 				"ms-vscode.makefile-tools",
-				"golang.Go"
+				"golang.Go",
+				"ms-azuretools.vscode-docker"
 			]
 		}
 	}
